# special-organizer

./: .gitignore  AGENTS.md  PRODUCT_BLUEPRINT.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: AGENT_AUDIT_2026-05-25.md  AGENT_DELEGATION_PLAN.md  APP_SPEC.md  RELEASE_PACKAGING.md
docs/release/: latest.example.json
scripts/: clear-special-organizer-data.cmd  clear-special-organizer-data.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial_schema.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/storage/: error.rs  mod.rs  repository.rs  types.rs  validation.rs
src/app/: App.module.css  App.tsx
src/components/: StateNotice.module.css  StateNotice.tsx
src/contracts/: series.ts
src/features/history/: historyCommands.ts
src/features/reports/: reportCommands.ts  reportModel.ts
src/features/series/: seriesCommands.ts  workspaceModel.ts
src/features/series/domain/: dateOnly.ts  idealEndDate.ts  index.ts  results.ts  statusMachine.ts
src/features/updates/: updateCommands.ts
src/styles/: global.css  tokens.css
src/test/: reportModel.test.ts  seriesCommands.test.ts  seriesDomain.test.ts  smoke.test.ts  workspaceModel.test.ts
src/test/fixtures/: seriesFixtures.ts
