[package]
name = "special-organizer"
version = "0.1.0"
description = "Special Organizer desktop shell"
authors = ["Special Organizer Contributors"]
edition = "2021"

[lib]
name = "special_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
