[package]
name = "special-organizer"
version = "0.1.1"
description = "Special Organizer desktop shell"
authors = ["Special Organizer Contributors"]
edition = "2021"

[lib]
name = "special_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2.10.1"
